--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "foxrolling",
   "type": "module",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": false,
-  "main": "./dist/foxrolling.js",
-  "files": [
-    "dist"
-  ],
+  "main": "./src/lib/index.ts",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
